@@ -4,7 +4,7 @@ CREATE TABLE hosts_templates_tmp (
 	templateid	bigint DEFAULT '0'	NOT NULL,
 	PRIMARY KEY (hosttemplateid)
 ) with OIDS;
-CREATE UNIQUE INDEX hosts_templates_1 on hosts_templates_tmp (hostid,templateid);
+CREATE UNIQUE INDEX hosts_templates_tmp_1 on hosts_templates_tmp (hostid,templateid);
 
 insert into hosts_templates_tmp select NULL,hostid,templateid from  hosts_templates;
 drop table  hosts_templates;
