@@ -4,7 +4,7 @@ CREATE TABLE items_applications_tmp (
 	itemid		bigint DEFAULT '0'	NOT NULL,
 	PRIMARY KEY (itemappid)
 ) with OIDS;
-CREATE INDEX items_applications_1 on items_applications_tmp (applicationid,itemid);
+CREATE INDEX items_applications_tmp_1 on items_applications_tmp (applicationid,itemid);
 
 insert into items_applications_tmp select NULL,applicationid,itemid from items_applications;
 drop table items_applications;
