@@ -4,7 +4,7 @@ CREATE TABLE users_groups_tmp (
 	userid		bigint DEFAULT '0'	NOT NULL,
 	PRIMARY KEY (id)
 ) with OIDS;
-CREATE INDEX users_groups_1 on users_groups_tmp (usrgrpid,userid);
+CREATE INDEX users_groups_tmp_1 on users_groups_tmp (usrgrpid,userid);
 
 insert into users_groups_tmp select NULL,usrgrpid,userid from users_groups;
 drop table users_groups;
